--- a/blue.htm
+++ b/blue.htm
@@ -6579,7 +6579,7 @@ Stayman takes care of invitation with 5+ spades.
           <span class="ccolor">
            &clubs;
           </span>
-          , possibly AQxxxx
+          , KQxxxx or better, usually 6&ndash;7 HCP
          </td>
         </tr>
        </table>
@@ -6598,7 +6598,7 @@ Stayman takes care of invitation with 5+ spades.
           <span class="dcolor">
            &diams;
           </span>
-          , possibly AQxxxx
+          , KQxxxx or better, usually 6&ndash;7 HCP
          </td>
         </tr>
        </table>
@@ -6767,17 +6767,113 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !S/T, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !F QUANT BW
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4NT
+           </td>
+           <td>
+            !NF, 15&ndash;16 HCP
+           </td>
+          </tr>
+         </table>
+         <ul>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              5NT
+             </td>
+             <td>
+              !F to a 5-card suit or 6NT
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              7
+              <span class="ccolor">
+               &clubs;
+              </span>
+             </td>
+             <td>
+              !P/C to a 5-card suit or 7NT
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -6786,10 +6882,72 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT, NF
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="last node">
        <table>
@@ -6798,10 +6956,84 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT, F
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6NT
+           </td>
+           <td>
+            S/O, 15 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
      </ul>
     </li>
@@ -6818,7 +7050,7 @@ Stayman takes care of invitation with 5+ spades.
     Weak: T/O with short clubs (Garbage Stayman)
    </li>
    <li>
-    INV: 4+
+    INV: 4&ndash;5
     <span class="scolor">
      &spades;
     </span>
@@ -6847,7 +7079,7 @@ Stayman takes care of invitation with 5+ spades.
     <span class="hcolor">
      &hearts;
     </span>
-    (jdh8)
+    (BTU/jdh8)
    </li>
   </ul>
   <div class="tree">
@@ -6980,7 +7212,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          F INV, 5+
+          F INV, 5=
           <span class="scolor">
            &spades;
           </span>
@@ -7010,7 +7242,31 @@ Stayman takes care of invitation with 5+ spades.
             2NT
            </td>
            <td>
-            MAX, 2=
+            INV, 2=
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+            <span class="dcolor">
+             &diams;
+            </span>
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !INV, 2=#, 3=
             <span class="scolor">
              &spades;
             </span>
@@ -7028,7 +7284,7 @@ Stayman takes care of invitation with 5+ spades.
             </span>
            </td>
            <td>
-            MAX, 3=
+            INV, 3=
             <span class="scolor">
              &spades;
             </span>
@@ -7201,10 +7457,25 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -7216,7 +7487,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -7247,7 +7518,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          INV, 5+
+          INV, 5=
           <span class="scolor">
            &spades;
           </span>
@@ -7410,10 +7681,25 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT, 0&ndash;3
+          QUANT BW, INV to 6NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -7428,7 +7714,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT, 0&ndash;3
+          QUANT BW, INV to 7NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -7607,10 +7893,32 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !S/T SPL, 0&ndash;1
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 4+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT, 0&ndash;3
+          QUANT BW, INV to 6NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -7625,7 +7933,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT, 0&ndash;3
+          QUANT BW, INV to 7NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -7839,13 +8147,54 @@ problems like 1NT-2
           </span>
          </td>
          <td>
-          !F INV+, 5+
+          !F INV+, 5=
           <span class="hcolor">
            &hearts;
           </span>
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !INV P/C, 2=
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !Choice of games, 3=
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -8053,10 +8402,25 @@ problems like 1NT-2
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -8068,7 +8432,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -8472,7 +8836,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -8484,7 +8848,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -8646,7 +9010,7 @@ with P/C.
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -8656,14 +9020,31 @@ with P/C.
           </span>
          </td>
          <td>
-          !FG, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4NT
+         </td>
+         <td>
+          QUANT BW, INV to 6NT
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          5NT
+         </td>
+         <td>
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
