--- a/wj.htm
+++ b/wj.htm
@@ -11728,7 +11728,7 @@ Stayman takes care of invitation with 5+ spades.
           <span class="ccolor">
            &clubs;
           </span>
-          , possibly AQxxxx
+          , KQxxxx or better, usually 6&ndash;7 HCP
          </td>
         </tr>
        </table>
@@ -11747,7 +11747,7 @@ Stayman takes care of invitation with 5+ spades.
           <span class="dcolor">
            &diams;
           </span>
-          , possibly AQxxxx
+          , KQxxxx or better, usually 6&ndash;7 HCP
          </td>
         </tr>
        </table>
@@ -11916,17 +11916,113 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          !S/T, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !F QUANT BW
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4NT
+           </td>
+           <td>
+            !NF, 15&ndash;16 HCP
+           </td>
+          </tr>
+         </table>
+         <ul>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              5NT
+             </td>
+             <td>
+              !F to a 5-card suit or 6NT
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              7
+              <span class="ccolor">
+               &clubs;
+              </span>
+             </td>
+             <td>
+              !P/C to a 5-card suit or 7NT
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -11935,10 +12031,72 @@ Stayman takes care of invitation with 5+ spades.
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT, NF
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="last node">
        <table>
@@ -11947,10 +12105,84 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT, F
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 0 or 4 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 1 ace
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 2 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !F, 16&ndash;17 HCP, 3 aces
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6NT
+           </td>
+           <td>
+            S/O, 15 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
      </ul>
     </li>
@@ -11967,7 +12199,7 @@ Stayman takes care of invitation with 5+ spades.
     Weak: T/O with short clubs (Garbage Stayman)
    </li>
    <li>
-    INV: 4+
+    INV: 4&ndash;5
     <span class="scolor">
      &spades;
     </span>
@@ -11996,7 +12228,7 @@ Stayman takes care of invitation with 5+ spades.
     <span class="hcolor">
      &hearts;
     </span>
-    (jdh8)
+    (BTU/jdh8)
    </li>
   </ul>
   <div class="tree">
@@ -12129,7 +12361,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          F INV, 5+
+          F INV, 5=
           <span class="scolor">
            &spades;
           </span>
@@ -12159,7 +12391,31 @@ Stayman takes care of invitation with 5+ spades.
             2NT
            </td>
            <td>
-            MAX, 2=
+            INV, 2=
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+            <span class="dcolor">
+             &diams;
+            </span>
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            !INV, 2=#, 3=
             <span class="scolor">
              &spades;
             </span>
@@ -12177,7 +12433,7 @@ Stayman takes care of invitation with 5+ spades.
             </span>
            </td>
            <td>
-            MAX, 3=
+            INV, 3=
             <span class="scolor">
              &spades;
             </span>
@@ -12350,10 +12606,25 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -12365,7 +12636,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -12396,7 +12667,7 @@ Stayman takes care of invitation with 5+ spades.
           </span>
          </td>
          <td>
-          INV, 5+
+          INV, 5=
           <span class="scolor">
            &spades;
           </span>
@@ -12559,10 +12830,25 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT, 0&ndash;3
+          QUANT BW, INV to 6NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -12577,7 +12863,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT, 0&ndash;3
+          QUANT BW, INV to 7NT, 0&ndash;3
           <span class="hcolor">
            &hearts;
           </span>
@@ -12756,10 +13042,32 @@ Stayman takes care of invitation with 5+ spades.
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !S/T SPL, 0&ndash;1
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , 4+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT, 0&ndash;3
+          QUANT BW, INV to 6NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -12774,7 +13082,7 @@ Stayman takes care of invitation with 5+ spades.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT, 0&ndash;3
+          QUANT BW, INV to 7NT, 0&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -12988,13 +13296,54 @@ problems like 1NT-2
           </span>
          </td>
          <td>
-          !F INV+, 5+
+          !F INV+, 5=
           <span class="hcolor">
            &hearts;
           </span>
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !INV P/C, 2=
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !Choice of games, 3=
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -13202,10 +13551,25 @@ problems like 1NT-2
        <table>
         <tr>
          <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -13217,7 +13581,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -13621,7 +13985,7 @@ problems like 1NT-2
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT BW, INV to 6NT
          </td>
         </tr>
        </table>
@@ -13633,7 +13997,7 @@ problems like 1NT-2
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
@@ -13795,7 +14159,7 @@ with P/C.
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -13805,14 +14169,31 @@ with P/C.
           </span>
          </td>
          <td>
-          !FG, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !F QUANT BW
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4NT
+         </td>
+         <td>
+          QUANT BW, INV to 6NT
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          5NT
+         </td>
+         <td>
+          QUANT BW, INV to 7NT
          </td>
         </tr>
        </table>
